nnabla/versions/v1.38.0/_sources/cpp/Cpp/class.rst.txt
NNABLA Class
============

.. toctree::
	maxdepth: 1

	class/Abs.rst
	class/AbsoluteError.rst
	class/ACos.rst
	class/ACosh.rst
	class/nbla--AdaBelief.rst
	class/nbla--AdaBound.rst
	class/nbla--Adadelta.rst
	class/nbla--Adagrad.rst
	class/nbla--Adam.rst
	class/nbla--Adamax.rst
	class/nbla--AdamW.rst
	class/nbla--AdaptiveSeparableConvolution.rst
	class/nbla--Add2.rst
	class/nbla--AddN.rst
	class/AddScalar.rst
	class/nbla--Affine.rst
	class/nbla--AffineGrid.rst
	class/nbla--Allocator.rst
	class/nbla--AllocatorMemory.rst
	class/nbla--AMSBound.rst
	class/nbla--AMSGRAD.rst
	class/nbla--Arange.rst
	class/nbla--Array.rst
	class/nbla--ArrayCreator.rst
	class/nbla--ArrayGroup.rst
	class/nbla--ArraySynchronizer.rst
	class/ASin.rst
	class/ASinh.rst
	class/nbla--Assign.rst
	class/ATan.rst
	class/ATan2.rst
	class/Atanh.rst
	class/nbla--AutoForward.rst
	class/nbla--AveragePooling.rst
	class/nbla--BackendBase.rst
	class/nbla--BackendUtils.rst
	class/nbla--BaseCgVariable.rst
	class/nbla--BaseFunction.rst
	class/nbla--BaseNdArray.rst
	class/nbla--BasePooling.rst
	class/nbla--BaseTransformBinary.rst
	class/nbla--BaseTransformUnary.rst
	class/nbla--BaseVariable.rst
	class/nbla--BatchCholesky.rst
	class/nbla--BatchDet.rst
	class/nbla--BatchInv.rst
	class/nbla--BatchLogdet.rst
	class/nbla--BatchMatmul.rst
	class/nbla--BatchNormalization.rst
	class/BcAdd2.rst
	class/nbla--BinaryConnectAffine.rst
	class/nbla--BinaryConnectConvolution.rst
	class/nbla--BinaryCrossEntropy.rst
	class/nbla--BinaryError.rst
	class/BinarySigmoid.rst
	class/BinaryTanh.rst
	class/nbla--BinaryWeightAffine.rst
	class/nbla--BinaryWeightConvolution.rst
	class/nbla--BitShift.rst
	class/nbla--BoolFill.rst
	class/nbla--BoolGather.rst
	class/nbla--BoolScatter.rst
	class/nbla--Broadcast.rst
	class/nbla--BroadcastTo.rst
	class/nbla--CachingAllocatorWithBuckets.rst
	class/nbla--CachingAllocatorWithBucketsBase.rst
	class/nbla--Callback.rst
	class/nbla--CategoricalCrossEntropy.rst
	class/Ceil.rst
	class/nbla--CELU.rst
	class/nbla--CgFunction.rst
	class/nbla--CgVariable.rst
	class/nbla--ChannelFirstAdaptor.rst
	class/nbla--ClearCalledFlagRecorder.rst
	class/nbla--ClipGradByNorm.rst
	class/nbla--ClipGradByValue.rst
	class/nbla--Communicator.rst
	class/nbla--Concatenate.rst
	class/nbla--ConfusionMatrix.rst
	class/nbla--Constant.rst
	class/nbla--Context.rst
	class/nbla--Convolution.rst
	class/Cos.rst
	class/Cosh.rst
	class/nbla--Cpu.rst
	class/nbla--CpuArray.rst
	class/nbla--CpuCachedArray.rst
	class/nbla--CpuDlpackArray.rst
	class/nbla--CpuMemory.rst
	class/nbla--CReLU.rst
	class/nbla--CumProd.rst
	class/nbla--CumSum.rst
	class/nbla--DataParallelCommunicator.rst
	class/nbla--Deconvolution.rst
	class/nbla--DeformableConvolution.rst
	class/nbla--DepthwiseConvolution.rst
	class/nbla--DepthwiseDeconvolution.rst
	class/nbla--DequantizeLinear.rst
	class/nbla--DestructorCallback.rst
	class/Div2.rst
	class/nbla--DlpackArray.rst
	class/nbla--DlpackArrayRegistry.rst
	class/nbla--Dropout.rst
	class/nbla--Einsum.rst
	class/ELU.rst
	class/nbla--Embed.rst
	class/EqualScalar.rst
	class/Erf.rst
	class/nbla--Exception.rst
	class/nbla--utils--nnp--Executor.rst
	class/Exp.rst
	class/nbla--EyeLike.rst
	class/nbla--FFT.rst
	class/nbla--FixedPointQuantize.rst
	class/nbla--Flip.rst
	class/Floor.rst
	class/nbla--Function.rst
	class/nbla--FunctionDb.rst
	class/nbla--FunctionHookWithObject.rst
	class/nbla--FunctionRegistry.rst
	class/nbla--FusedBatchNormalization.rst
	class/nbla--FusedConvolution.rst
	class/nbla--GarbageCollector.rst
	class/nbla--Gather.rst
	class/nbla--GatherNd.rst
	class/nbla--GlobalAveragePooling.rst
	class/nbla--GlobalClearBufferState.rst
	class/nbla--GlobalContext.rst
	class/nbla--GlobalFunctionCallback.rst
	class/nbla--GlobalSolverCallback.rst
	class/GreaterEqualScalar.rst
	class/GreaterScalar.rst
	class/nbla--GroupNormalization.rst
	class/nbla--GRU.rst
	class/Hard.rst
	class/HardTanh.rst
	class/HuberLoss.rst
	class/nbla--Identity.rst
	class/nbla--IFFT.rst
	class/nbla--ImageAugmentation.rst
	class/nbla--INQAffine.rst
	class/nbla--INQConvolution.rst
	class/nbla--InstanceNormalization.rst
	class/nbla--Interpolate.rst
	class/nbla--ISTFT.rst
	class/nbla--KLMultinomial.rst
	class/nbla--Lamb.rst
	class/nbla--Lars.rst
	class/nbla--LayerNormalization.rst
	class/nbla--LeakyReLU.rst
	class/LessEqualScalar.rst
	class/LessScalar.rst
	class/nbla--Linspace.rst
	class/nbla--Lion.rst
	class/Log.rst
	class/LogicalAndScalar.rst
	class/LogicalOrScalar.rst
	class/LogicalXorScalar.rst
	class/LogSigmoid.rst
	class/nbla--LogSoftmax.rst
	class/nbla--LSTM.rst
	class/nbla--MatrixDiag.rst
	class/nbla--MatrixDiagPart.rst
	class/nbla--Max.rst
	class/Maximum2.rst
	class/MaximumScalar.rst
	class/nbla--MaxPooling.rst
	class/nbla--MaxPoolingBackward.rst
	class/nbla--Mean.rst
	class/nbla--MeanSubtraction.rst
	class/nbla--Memory.rst
	class/nbla--Meshgrid.rst
	class/nbla--Min.rst
	class/Minimum2.rst
	class/MinimumScalar.rst
	class/nbla--MinMaxQuantize.rst
	class/nbla--Mod2.rst
	class/nbla--Momentum.rst
	class/nbla--utils--nnp--Monitor.rst
	class/Mul2.rst
	class/nbla--MulN.rst
	class/MulScalar.rst
	class/nbla--MultiProcessDataParallelCommunicator.rst
	class/nbla--NaiveAllocator.rst
	class/nbla--NdArray.rst
	class/nbla--Nesterov.rst
	class/nbla--utils--nnp--Network.rst
	class/nbla--NmsDetection2d.rst
	class/nbla--NNabla.rst
	class/nbla--utils--nnp--Nnp.rst
	class/nbla--NonZero.rst
	class/nbla--Norm.rst
	class/nbla--NormNormalization.rst
	class/NotEqualScalar.rst
	class/nbla--OneHot.rst
	class/nbla--ONNXNonMaxSuppression.rst
	class/nbla--ONNXResize.rst
	class/nbla--utils--nnp--Optimizer.rst
	class/nbla--PackPaddedSequence.rst
	class/nbla--Pad.rst
	class/nbla--PadPackedSequence.rst
	class/nbla--PatchCorrelation.rst
	class/nbla--PhysicalMemory.rst
	class/Pow2.rst
	class/nbla--Pow2Quantize.rst
	class/PowScalar.rst
	class/nbla--PReLU.rst
	class/nbla--Prod.rst
	class/nbla--Prune.rst
	class/nbla--QuantizeLinear.rst
	class/nbla--Rand.rst
	class/nbla--RandBeta.rst
	class/nbla--RandBinomial.rst
	class/nbla--RandGamma.rst
	class/nbla--Randint.rst
	class/nbla--Randn.rst
	class/nbla--RandomChoice.rst
	class/nbla--RandomCrop.rst
	class/nbla--RandomErase.rst
	class/nbla--RandomFlip.rst
	class/nbla--RandomManager.rst
	class/nbla--RandomShift.rst
	class/RDivScalar.rst
	class/nbla--Recompute.rst
	class/nbla--ReduceMean.rst
	class/nbla--ReduceSum.rst
	class/nbla--ReLU.rst
	class/nbla--Reshape.rst
	class/nbla--RMSprop.rst
	class/nbla--RMSpropGraves.rst
	class/nbla--RNN.rst
	class/nbla--RoiAlign.rst
	class/Round.rst
	class/RPowScalar.rst
	class/RSubScalar.rst
	class/nbla--ScatterAdd.rst
	class/nbla--ScatterNd.rst
	class/nbla--SearchSorted.rst
	class/nbla--SELU.rst
	class/nbla--Sgd.rst
	class/nbla--SgdW.rst
	class/nbla--Shape.rst
	class/nbla--Shift.rst
	class/Sigmoid.rst
	class/nbla--SigmoidCrossEntropy.rst
	class/Sign.rst
	class/Sin.rst
	class/Sinc.rst
	class/nbla--SingletonManager.rst
	class/Sinh.rst
	class/nbla--Sink.rst
	class/nbla--Slice.rst
	class/nbla--Softmax.rst
	class/nbla--SoftmaxCrossEntropy.rst
	class/SoftSign.rst
	class/nbla--Solver.rst
	class/nbla--Sort.rst
	class/nbla--SpectralNorm.rst
	class/nbla--Split.rst
	class/SquaredError.rst
	class/nbla--Stack.rst
	class/nbla--STFT.rst
	class/Sub2.rst
	class/nbla--Sum.rst
	class/nbla--SumPooling.rst
	class/nbla--SwapInOutScheduler.rst
	class/Swish.rst
	class/nbla--SyncBatchNormalization.rst
	class/nbla--SyncedArray.rst
	class/nbla--SyncedArrayCallback.rst
	class/Tan.rst
	class/Tanh.rst
	class/TanhShrink.rst
	class/nbla--TensorNormalization.rst
	class/nbla--Tile.rst
	class/nbla--TopKData.rst
	class/nbla--TopKGrad.rst
	class/nbla--TopNError.rst
	class/nbla--utils--nnp--TrainingConfig.rst
	class/nbla--TransformBinary.rst
	class/nbla--TransformUnary.rst
	class/nbla--Transpose.rst
	class/nbla--Trilu.rst
	class/nbla--Unique.rst
	class/nbla--Unlink.rst
	class/nbla--Unpooling.rst
	class/nbla--UpdateHookWithObject.rst
	class/nbla--Variable.rst
	class/nbla--VATNoise.rst
	class/nbla--VirtualCachingAllocator.rst
	class/nbla--VirtualCachingAllocatorBase.rst
	class/nbla--WarpByFlow.rst
	class/nbla--WarpByGrid.rst
	class/nbla--WeightNormalization.rst
	class/nbla--WeightStandardization.rst
	class/nbla--Where.rst
